# taskcat

./: .gitignore  README.md  migrate.py  pyproject.toml  requirements.txt
deployment/docker/: Dockerfile  docker-compose-dev.yml  docker-compose.yml
migrations/: add_difficulty_points_to_tasks.sql
scripts/: alter_tasks.sql  run-dev.bat  run-dev.sh  set-env.bat  set-env.ps1  set-env.sh  setup-docker-permissions.sh  tabes.sql
src/: main.py
src/api/v1/: __init__.py  ai.py  auth.py  sqlpractice.py  tasks.py  users.py
src/core/: .env  auth.py  config.py  database.py  init_db.py  security.py
src/models/: __init__.py  material.py  task.py  user.py
src/schemas/: task.py  user.py
src/scripts/: check_docker_env.py  check_schema.py  run_migration.py
src/scripts/sql_practice/: .gitkeep
src/services/: sql_practice.py  task.py  user.py
